FIX: Actualizar anchore/sbom-action a v4 para resolver error de version.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           command: test
 
       - name: 📜 Generar SBOM (CycloneDX)
-        uses: anchore/sbom-action@v4
+        uses: anchore/sbom-action@main
         with:
           format: cyclonedx
           output-file: sbom.json
