Fix Snyk project path in workflow configuration
Corrected the Snyk project path to point to the specific package.json file.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,8 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: test
-          project: ${{ env.APP_SOURCE_DIR }} # <-- FIX: Snyk busca en el subdirectorio
+          # ¡CORRECCIÓN! Indicamos la ruta exacta del package.json
+          args: --file=app_source/package.json
 
       - name: 📜 Generar SBOM (CycloneDX)
         # Nota: Asumiendo que anchore/sbom-action@main es temporalmente estable
