Add TF_SKIP_PROVIDER_VERIFICATION to Terraform Init
Added environment variable to skip PGP key verification.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,6 +102,9 @@ jobs:
 
       # 🛠️ Terraform Init
         - name: 🛠️ Terraform Init
+        # Añadimos la variable de entorno para ignorar el error de PGP: key expired
+          env: 
+            TF_SKIP_PROVIDER_VERIFICATION: true
           run: terraform init -upgrade
           working-directory: ${{ env.TERRAFORM_DIR }}
 
