Fix Snyk action configuration in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,15 +39,15 @@ jobs:
         working-directory: ${{ env.APP_SOURCE_DIR }} # <-- FIX
 
       - name: 🔒 Análisis de Vulnerabilidades (Snyk)
-        uses: snyk/actions/node@master
-        # 🗑️ ELIMINE EL BLOQUE 'env' AQUÍ 🗑️
-        with:
-          # ✅ CORRECCIÓN: Use 'snyk-token' dentro del bloque 'with'
-          snyk-token: ${{ secrets.SNYK_TOKEN }} 
-          command: test
-          # ¡CORRECCIÓN! Indicamos la ruta exacta del package.json
-          args: --file=app_source/package.json
-
+        uses: snyk/actions/node@master
+        with:
+          # Debe estar alineado con 'command' y 'args'
+          snyk-token: ${{ secrets.SNYK_TOKEN }} 
+          # Este es el primer argumento bajo 'with', con 2 espacios más de indentación
+          command: test
+          # Este es el segundo argumento bajo 'with'
+          args: --file=app_source/package.json
+          
       - name: 📜 Generar SBOM (CycloneDX)
         # Nota: Asumiendo que anchore/sbom-action@main es temporalmente estable
         uses: anchore/sbom-action@main
