Update deployment runner from rsimoes to rsimoesv2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,7 +81,7 @@ jobs:
   # =================================================================
   deploy_local:
       needs: security_and_build
-      runs-on: rsimoes
+      runs-on: rsimoesv2
       env:
         TERRAFORM_DIR: infra/
         IMAGE_NAME: proyecto1-app
