--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,12 +40,14 @@ jobs:
 
       - name: 🔒 Análisis de Vulnerabilidades (Snyk)
         uses: snyk/actions/node@master
+        # --- POSICIÓN CORREGIDA ---
+        working-directory: ${{ env.APP_SOURCE_DIR }} 
+        # --------------------------
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: test
           args: --all-projects # Opcional, pero recomendado
-        working-directory: ${{ env.APP_SOURCE_DIR }} # <-- ¡Asegúrate de incluir esto!
                   
       - name: 📜 Generar SBOM (CycloneDX)
         # Nota: Asumiendo que anchore/sbom-action@main es temporalmente estable
