Fix working-directory position in Snyk action
Moved working-directory to the correct position in the Snyk action.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,9 +40,8 @@ jobs:
 
       - name: 🔒 Análisis de Vulnerabilidades (Snyk)
         uses: snyk/actions/node@master
-        # --- POSICIÓN CORREGIDA ---
+        # working-directory debe ir aquí, al mismo nivel que uses, env y with.
         working-directory: ${{ env.APP_SOURCE_DIR }} 
-        # --------------------------
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
