--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,7 +89,7 @@ jobs:
   # =================================================================
   deploy_local:
       needs: security_and_build
-      runs-on: ubuntu-latest
+      runs-on: rsimoesv2
       env:
         TERRAFORM_DIR: infra/
         IMAGE_NAME: proyecto1-app
