--- a/infra/prometheus.yml
+++ b/infra/prometheus.yml
@@ -13,4 +13,4 @@ scrape_configs:
   - job_name: 'app_service'
     # La aplicación se ejecuta en el host local del runner en el puerto 8080
     static_configs:
-      - targets: ['proyecto1-app-v1:8080']
+      - targets: ['proyecto1-app:8080']
